<resources>
    <string name="title">VulnDroid</string>
    <string name="level1">"Info in VCS"</string>
    <string name="level2">"Logging Details"</string>
    <string name="level3">"Hardcoding details"</string>
    <string name="level4">"Shared Prefs"</string>
    <string name="level5">"Info in functions"</string>
    <string name="level6">"Insecure Database"</string>
    <string name="level7">"Insecure Certificate"</string>
    <string name="level8">"Internal Storage"</string>
    <string name="level9">"External Storage"</string>
    <string name="log_head">If you know what to do, then you know what to do</string>
    <string name="btn_text">ClickMe</string>
    <string name="flag">Enter your flag here!</string>
    <string name="submit">Submit</string>
    <string name="HardcodingDetails">"{flag:Strings.xml_Cracked}"</string>
    <string name="score">"Your current score is: "</string>
    <string name="score1">"SCORE!!"</string>
</resources>
